# moex-hack

./: docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/app/: .env.example  config.py  settings.py  setup.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  backtest.py  endpoints.py  news.py  strategy.py  tickers.py
backend/app/config/: settings.py
backend/app/core/: exceptions.py
backend/app/core/auth/: jwt.py  service.py  utils.py
backend/app/core/models/: models.py
backend/app/core/schemas/: strategy.py  tickers.py  user.py
backend/app/core/service/: service.py
backend/src/: config.py  main.py
backend/src/auth/: config.py  schemas.py
csvdata/: YNDX_RUB-1h.csv
frontend/src/: app.scss
frontend/src/lib/: FileUpload.svelte  Loader.svelte  Portfolio.svelte  index.ts  localStorage.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/articles/: +error.svelte  +layout.server.ts  +page.svelte
frontend/src/routes/articles/[article_id]/: +page.server.ts  +page.svelte
frontend/src/routes/simulator/: +page.server.ts  +page.svelte  ProgressButton.svelte  Results.svelte  Tabs.svelte  Upload.svelte
frontend/static/: Sample.py
frontend/static/article-sources/: 100-lines.html  guide.html  python-algotrading.html  transformer.html
